build: add lombok and new source set