@@ -55,11 +55,16 @@ repositories
 
 dependencies
 {
-    final String junitVersion = "5.8.1"
+    final String junitVersion  = "5.8.1"
+    final String lombokVersion = "1.18.48"
 
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-    testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-    testRuntimeOnly    "org.junit.platform:junit-platform-launcher"
+    compileOnly             "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor     "org.projectlombok:lombok:${lombokVersion}"
+    testCompileOnly         "org.projectlombok:lombok:${lombokVersion}"
+    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+    testImplementation      "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly         "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+    testRuntimeOnly         "org.junit.platform:junit-platform-launcher"
 }
 
 test
@@ -78,5 +83,25 @@ clean
 }
 
 apply from: 'gradle/format.gradle'
+
+sourceSets
+{
+    examples
+    {
+        java
+        {
+            srcDirs = ['examples/']
+        }
+
+        compileClasspath += sourceSets.main.output + configurations.compileClasspath
+        runtimeClasspath += sourceSets.main.output + configurations.runtimeClasspath
+    }
+}
+
+tasks.withType(JavaCompile).configureEach
+{
+    // Silence Lombok warning: "A terminally deprecated method in sun.misc.Unsafe has been called"
+    options.forkOptions.jvmArgs << '--sun-misc-unsafe-memory-access=allow'
+}
 
 build.dependsOn 'javadoc'
